Added Lux (not working) and DS18B20 (working)

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,6 @@ lib_deps =
 	adafruit/Adafruit HX8357 Library@^1.1.10
 	adafruit/Adafruit BusIO@^1.7.2
 	adafruit/Adafruit GFX Library@^1.10.7
+	paulstoffregen/OneWire@^2.3.5
+	milesburton/DallasTemperature@^3.9.1
 monitor_speed = 115200
