--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,6 @@ lib_deps =
 	paulstoffregen/OneWire@^2.3.5
 	milesburton/DallasTemperature@^3.9.1
 monitor_speed = 115200
+;monitor_port = /dev/cu.usbmodem14301
+
+
