--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,5 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.10.7
 	paulstoffregen/OneWire@^2.3.5
 	milesburton/DallasTemperature@^3.9.1
+	paulstoffregen/Time@^1.6
 monitor_speed = 115200
-;monitor_port = /dev/cu.usbmodem14301
-
-
