--- a/platformio.ini
+++ b/platformio.ini
@@ -19,4 +19,5 @@ lib_deps =
 	paulstoffregen/OneWire@^2.3.5
 	milesburton/DallasTemperature@^3.9.1
 	paulstoffregen/Time@^1.6
+	powerbroker2/SerialTransfer@^3.1.1
 monitor_speed = 115200
