--- a/platformio.ini
+++ b/platformio.ini
@@ -20,4 +20,5 @@ lib_deps =
 	milesburton/DallasTemperature@^3.9.1
 	paulstoffregen/Time@^1.6
 	powerbroker2/SerialTransfer@^3.1.1
+	khoih-prog/SAMD_TimerInterrupt@^1.4.0
 monitor_speed = 115200
